# VirtualSoc

./: .gitignore  CMakeLists.txt  Makefile
client/: client_core.c  main_client.c  protocol_client.c  utils_client.c
common/: helpers.c  response.c
data/: virtualsoc.db
include/: auth.h  client.h  command_dispatch.h  common.h  friends.h  group_chat.h  groups.h  helpers.h  messages.h  models.h  notifications.h  notify_server.h  posts.h  protocol.h  protocol_client.h  response.h  server.h  sessions.h  storage.h  utils_client.h
server/: auth.c  command_dispatch.c  friends.c  group_chat.c  groups.c  main_server.c  messages.c  models.c  notifications.c  notify_server.c  posts.c  server_core.c  sessions.c  storage.c
